[package]
name = "sock_server"
version = "0.1.0"
edition = "2021"

[dependencies]
fast-socks5 = "0.9.6"
structopt = "0.3"
tokio = { version = "1", features = [
    "io-util",
    "net",
    "time",
    "rt-multi-thread",
    "macros",
] }
anyhow = "1"
thiserror = "1"
tokio-stream = "0.1"
async-trait = "0.1"
log = "0.4"
env_logger = "0.9"